test/fails/bad_tags/add2.lgl
tag a is vec<2>;

void main() {
    a->a x = [[1., 2.], [1., 2.]];
    a->vec<2> y = [[1., 2.], [1., 2.]];

    a->a bad = x + y; // Can't downcast for addition
}
